...
        android:src="@drawable/chat_company"
        android:layout_gravity="center"
        android:layout_weight="0.1" />


    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="Email"
        android:inputType="textEmailAddress"

        android:padding="12dp" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="12dp"

        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:onClick="onLoginButtonClick"
        android:text="Login" />
...

        />



    <TextView
        android:id="@+id/signup_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:onClick="onRegistrationButtonClick"
        android:text="New Here? Sign Up"
...
