...
        <!--android:layout_gravity="bottom|end"-->
        <!--android:layout_margin="@dimen/fab_margin"-->
        <!--android:src="@android:drawable/ic_input_add"-->

        <!--/>-->
    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"  />

    <com.github.clans.fab.FloatingActionMenu
        android:layout_gravity="bottom|end"
        android:id="@+id/setting_stack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
...
            app:fab_colorNormal="@android:color/holo_blue_bright"
            app:fab_colorPressed="@android:color/holo_blue_bright"
            app:fab_size="mini"
            app:fab_label="start group chat" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/change_status_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fab_add"
            app:fab_colorNormal="@android:color/holo_blue_bright"
            app:fab_colorPressed="@android:color/holo_blue_bright"
            app:fab_size="mini"
...
