...
<EditText xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="Email"
    android:inputType="textEmailAddress"
    android:padding="12dp"
    android:id="@+id/add_friend_edit_text"
    >

</EditText>


