<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.magedmilad.chatone.DetailsFragment">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:src="@drawable/chat_company_icon"
        android:id="@+id/avatar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:text="hello"
        android:textSize="40sp"
        android:id="@+id/user_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:text="hellohello"
        android:textSize="40sp"
        android:id="@+id/email"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:text="status"
        android:textSize="40sp"
        android:id="@+id/status"/>

</LinearLayout>
