<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <!--<com.mikhaellopez.circularimageview.CircularImageView-->
        <!--android:id="@+id/message_circular_image_view"-->
        <!--android:layout_width="55dp"-->
        <!--android:layout_height="55dp"-->
        <!--android:layout_gravity="center"-->
        <!--android:src="@drawable/default_avatar"-->
        <!--app:civ_border_color="#EEEEEE"-->
        <!--app:civ_border_width="4dp"-->
        <!--app:civ_shadow="true"-->
        <!--app:civ_shadow_color="@color/colorPrimary"-->
        <!--app:civ_shadow_radius="10"-->
        <!--android:layout_alignParentRight="true"-->
       <!--/>-->

    <!--android:layout_toLeftOf="@+id/message_circular_image_view"-->

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="#00a4e4"
        app:cardCornerRadius="9sp"
        app:cardElevation="5sp"
        app:cardUseCompatPadding="true"
        app:contentPadding="5sp"
        android:id="@+id/view"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        >

        <TextView
            android:id="@+id/message_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="messege"
            android:textSize="15sp"
            android:textColor="#ffffff"
            />
    </android.support.v7.widget.CardView>


</RelativeLayout>