...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/message_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:inputType="textShortMessage"
...

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/send"
            android:layout_gravity="center"
            android:id="@+id/send_circular_image_view"
            android:onClick="onSendButtonClick"
            />

    </LinearLayout>


...
